Alterações do dia 31/07/2014

--- a/TurmaOnline/web/WEB-INF/web.xml
+++ b/TurmaOnline/web/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     <!-- Início Configuração do Entities -->
     <context-param>
         <param-name>br.entities.THEME</param-name>
-        <param-value>brewedcoffee</param-value>
+        <param-value>uecePadrao</param-value>
     </context-param>
 
     <filter>
