--- a/TurmaOnline/src/java/i18n.properties
+++ b/TurmaOnline/src/java/i18n.properties
@@ -1,5 +1,5 @@
 # Aplica\u00e7\u00e3o
-application.name=
+application.name= Turma Online
 application.version=
 application.copyRight=Powered by Entities Framework
 application.contact=entitiesframework@gmail.com
