novo cadastro de usuarios e envio de email.

--- a/TurmaOnline/nbproject/project.properties
+++ b/TurmaOnline/nbproject/project.properties
@@ -26,14 +26,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.commons-email-1.3.2.jar=lib\\commons-email-1.3.2.jar
-file.reference.Utilities.jar=lib\\Utilities.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=false
 j2ee.deploy.on.save=false
 j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/derby.jar:${j2ee.server.home}/lib/derbyclient.jar:${j2ee.server.home}/lib/ecj-4.3.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/commons-beanutils-1.8.3.jar:${j2ee.server.home}/lib/commons-collections-3.2.1.jar:${j2ee.server.home}/lib/commons-digester-1.8.jar:${j2ee.server.home}/lib/commons-fileupload-1.2.1.jar:${j2ee.server.home}/lib/commons-io-1.4.jar:${j2ee.server.home}/lib/commons-lang-2.6.jar:${j2ee.server.home}/lib/commons-logging-1.1.1.jar:${j2ee.server.home}/lib/derby.jar:${j2ee.server.home}/lib/derbyclient.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/el-impl-1.0.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jhighlight-1.0.jar:${j2ee.server.home}/lib/jsf-api-1.2_15-b01.jar:${j2ee.server.home}/lib/jsf-facelets-1.1.14.jar:${j2ee.server.home}/lib/jsf-impl-1.2_15-b01.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/jstl.jar:${j2ee.server.home}/lib/jtds-1.2.2.jar:${j2ee.server.home}/lib/postgresql-9.1-901.jdbc4.jar:${j2ee.server.home}/lib/richfaces-api-3.3.3.Final.jar:${j2ee.server.home}/lib/richfaces-impl-3.3.3.Final.jar:${j2ee.server.home}/lib/richfaces-ui-3.3.3.Final.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/standard.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -44,9 +42,7 @@ javac.classpath=\
     ${libs.Hibernate-Validator-4.3.1-FINAL.classpath}:\
     ${libs.Entities-3.8.classpath}:\
     ${libs.DriverDB.classpath}:\
-    ${libs.Lombok-1.12.2.classpath}:\
-    ${file.reference.commons-email-1.3.2.jar}:\
-    ${file.reference.Utilities.jar}
+    ${libs.Util.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
