--- a/TurmaOnline/lib/nblibraries.properties
+++ b/TurmaOnline/lib/nblibraries.properties
@@ -10,7 +10,7 @@ libs.Entities-3.8.classpath=\
     ${base}/Entities-3.8/dozer-5.3.2.jar;\
     ${base}/Entities-3.8/jboss-el-2.0.1.GA.jar;\
     ${base}/Entities-3.8/slf4j-api-1.6.4.jar;\
-    ${base}/Entities-3.8/Entities-3.8.3-SNAPSHOT.jar
+    ${base}/Entities-3.8/Entities-3.8.4-RC.jar
 libs.Hibernate-3.6.8-FINAL.classpath=\
     ${base}/Hibernate-3.6.8-FINAL/antlr-2.7.6.jar;\
     ${base}/Hibernate-3.6.8-FINAL/commons-collections-3.1.jar;\
@@ -53,3 +53,10 @@ libs.RichFaces-Themes.classpath=\
     ${base}/RichFaces-Themes/freecssTemplates-1.0.jar;\
     ${base}/RichFaces-Themes/violetRays-3.3.3.Final.jar;\
     ${base}/RichFaces-Themes/ueceTemplates-1.1.jar
+libs.Util.classpath=\
+    ${base}/Util/Utilities.jar;\
+    ${base}/Util/commons-email-1.3.2.jar;\
+    ${base}/Util/mail.jar;\
+    ${base}/Util/poi-3.7-20101029.jar;\
+    ${base}/Util/lombok-1.12.4.jar
+libs.Util.displayName=Util
